# auth/routes.go
@@ -4,6 +4,6 @@ import "github.com/gorilla/mux"
 
 func Router(router *mux.Router) *mux.Router {
 	router.HandleFunc("/login", login).Methods("POST")
-	router.HandleFunc("/logout", logout).Methods("GET")
+	router.HandleFunc("/logout", logout).Methods("POST")
 	return router
 }
